--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -4,11 +4,11 @@
 		<title>Home</title>
 		
 		<head th:fragment="css">
-			<link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
+			<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 		</head>
 		
 		<head th:fragment="js">
-			<script th:src="@{/static/js/bootstrap.min.js}"></script>
+			<script th:src="@{/js/bootstrap.min.js}"></script>
 		</head>
 	</head>
 	
