--- a/src/main/resources/templates/addPilot.html
+++ b/src/main/resources/templates/addPilot.html
@@ -15,7 +15,7 @@
 			<input type="text" name="licenseNumber" />
 			<br>
 			Name: <br>
-			<input type="text" name="name" />
+			<input type="text" name="name" /><br>
 			Fly Hour: <br>
 			<input type="number" name="flyHour" />
 			<br><br>
