--- a/src/main/resources/templates/view-pilot.html
+++ b/src/main/resources/templates/view-pilot.html
@@ -12,21 +12,48 @@
 		<h3 th:text="'Name : '+${pilot.name}"></h3>
 		<h3 th:text="'Fly Hour : '+${pilot.flyHour}"></h3>
 		<h3 th:text="${pilot.flyHour} >= 100? 'Status : Pilot Senior' : 'Status : Pilot Junior'"></h3>
-		<form th:action="@{/pilot/update/} + $(pilot.id)">
+		
+		<form th:action="@{/pilot/update/} + ${pilot.licenseNumber}">
 			<button type="submit">Update Pilot</button>
 		</form>
-		<form th:action="@{'pilot/delete/' + ${/pilot.id}}">
+		<form th:action="@{'pilot/delete/' + ${pilot.id}}">
 			<button type="submit">Delete Pilot</button>
 		</form>
 		
-		<a th:href="@{/flight/add/}+${pilot.licenseNumber}">Add Flight</a>
 		
-		<div th:each="flight : ${listOfFlight}">
-			<h3 th:text="${flight.id}"></h3>
-			<h3 th:text="${flight.flightNumber}"></h3>
-			<h3 th:text="${flight.origin}"></h3>
-			<h3 th:text="${flight.destination}"></h3>
-			<h3 th:text="${flight.time}"></h3>
-		</div>
+		<form th:action="@{/flight/delete}" th:object="${pilot}" method="post">
+			<table border="I">
+				<caption>Flights</caption>
+				<thead>
+					<tr>
+						<th style="text-align: center">No.</th>
+						<th style="text-align: center">Flight Number</th>
+						<th style="text-align: center">Origin</th>
+						<th style="text-align: center">Destination</th>
+						<th style="text-align: center">Time</th>
+						<th style="text-align: center">Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="flight, iterationStatus : *{pilotFlight}">
+						<td th:text="${iterationStatus.count}"></td>
+						<td th:text="${flight.flightNumber}"></td>
+						<td th:text="${flight.origin}"></td>
+						<td th:text="${flight.destination}"></td>
+						<td th:text="${flight.time}"></td>
+						<td>
+							<input type="checkbox" th:fields="*{pilotFlight}" th:value="${flight.id}"/>
+							<label th:for="${#ids.prev('pilotFlight')}">Hapus</label>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<button type="submit">Delete Selected Flight</button>
+		</form>
+		<br>
+		
+		<form th:action="@{/flight/add/}+${pilot.licenseNumber}">
+			<button value="sumbit">Add Flght</button>
+		</form>
 	</body>
 </html>
